--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
           </a>
         </li>
         <li class="menuItem">
-          <a href="#" id="constantManagerBtn" class="menuOption">
+          <a href="#project" id="constantManagerBtn" class="menuOption">
             <i class="fas fa-border-all"></i>
             <h5 class="menuText">Projects</h5>
           </a>
@@ -450,7 +450,7 @@
     </section>
 
     <!-- Projects Section Design -->
-    <section class="Projects__section">
+    <section id='project' class="Projects__section">
       <div class="container">
         <h1>Projects</h1>
 
