--- a/certificates/cr-main.html
+++ b/certificates/cr-main.html
@@ -39,6 +39,7 @@
     <link rel="stylesheet" href="../css/loading.css" />
     <link rel="stylesheet" href="../css/sidebar.css" />
     <link rel="stylesheet" href="../css/dark.css" />
+    <link rel="stylesheet" href="../css/certificates.css"/>
   </head>
   <body>
     <!-- Loader Addition -->
@@ -189,10 +190,12 @@
             </div>
           </div>
         </div>
+
       </div>
-      <div class="col-lg-9" >
+      <div class="col-lg-9 cieti" >
+
+        <center>  <h1>My Certificates</h1></center><br>
         <div class="portfolio">
-          <h2 class="title">My Certificates</h2>
 
           <a href="./cr1.html" class="card">
             <div class="content">
