--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
           </a>
         </li>
         <li class="menuItem">
-          <a href="#" id="constantManagerBtn" class="menuOption">
+          <a href="/blog" id="constantManagerBtn" class="menuOption">
             <i class="fas fa-blog"></i>
             <h5 class="menuText">Blogs</h5>
           </a>
