--- a/gallery.html
+++ b/gallery.html
@@ -181,7 +181,7 @@
         </div>
       </div>
       <div class="col-lg-9">
-          <h1>MY GALLERY</h1>
+          <h1 class="my-glry">MY GALLERY</h1>
         <div id="gallery" class="container-fluid">
           <!-- Menu Bar Creation -->
 
@@ -267,7 +267,7 @@
 
     <!-- Footer Design -->
     <footer>
-      <p style="color: black">
+      <p >
         Created With ❤️ By Samarth | Copyright &copy;
         <span class="Footer__year">2021</span> All rights reserved !
       </p>
