--- a/contact.html
+++ b/contact.html
@@ -105,8 +105,8 @@
         </div>
 
     <h1>Contact Me</h1>
-    <div class="row">
-      <div class="col-lg-2">
+    <div class="row header" id="headerrr1">
+      <div class="col-lg-1">
     <div id="menu" class="menu">
       <div class="actionsBar">
         <div>
@@ -131,7 +131,7 @@
           </a>
         </li>
         <li class="menuItem">
-          <a href="#" id="constantManagerBtn" class="menuOption">
+          <a href="./project.html" id="constantManagerBtn" class="menuOption">
             <i class="fas fa-border-all"></i>
             <h5 class="menuText">Projects</h5>
           </a>
@@ -160,7 +160,7 @@
           </a>
         </li>
         <li class="menuItem">
-          <a href="#" id="constantManagerBtn" class="menuOption">
+          <a href="/blog" id="constantManagerBtn" class="menuOption">
             <i class="fas fa-blog"></i>
             <h5 class="menuText">Blogs</h5>
           </a>
@@ -171,7 +171,19 @@
             <h5 class="menuText">Contact</h5>
           </a>
         </li>
+
       </ul>
+      <div class="time">
+      <span class="Time"></span>
+      <span class="Format"></span>
+      <div class="date">
+            <span class="Month"></span>
+            <span class="Day"></span>
+      </div>
+      <div class='partition'>
+        <span class='temp'></span>
+      </div>
+    </div>
 
       <div class="themeBar">
         <div>
@@ -179,10 +191,11 @@
             <i class="fas fa-moon" id="fa-moon"></i>
             <i class="fas fa-sun sun1" id="img-fluid"></i>
           </button>
+
         </div>
       </div>
     </div>
-</div>
+  </div>
     <!--  <div class="Separator"><br /><br /><br /><br /></div>-->
 
     <!--  <nav>
