--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="line-3"></div>
       </div>
     </nav> -->
-    <div class="con">
+    <!-- <div class="con">
           <div class="nav-bar">
             <div class="toggle-menu">
               <div class="line line1"></i></div>
@@ -164,7 +164,7 @@
             </ul>
 
           </div>
-        </div>
+        </div> -->
 
     <!-- Menu Bar Creation -->
     <div class="row header" id="headerrr1">
@@ -187,13 +187,13 @@
         </li>
 
         <li class="menuItem">
-          <a href="#about" id="productManagerBtn" class="menuOption">
+          <a href="./about.html" id="productManagerBtn" class="menuOption">
             <i class="fas fa-info"></i>
             <h5 class="menuText">About</h5>
           </a>
         </li>
         <li class="menuItem">
-          <a href="#project" id="constantManagerBtn" class="menuOption">
+          <a href="./project.html" id="constantManagerBtn" class="menuOption">
             <i class="fas fa-border-all"></i>
             <h5 class="menuText">Projects</h5>
           </a>
@@ -241,6 +241,9 @@
       <div class="date">
             <span class="Month"></span>
             <span class="Day"></span>
+      </div>
+      <div class='partition'>
+        <span class='temp'></span>
       </div>
     </div>
 
