--- a/music.html
+++ b/music.html
@@ -356,9 +356,9 @@ padding-top: 60px;
           </div>
         </div>
     <!-- Menu Bar Creation -->
-    <div class="row">
-      <div class="col-lg-3">
-    <div id="menu" class="menu" >
+    <div class="row header" id="headerrr1">
+      <div class="col-lg-1">
+    <div id="menu" class="menu">
       <div class="actionsBar">
         <div>
           <button id="menuBtn" type="button">
@@ -376,13 +376,13 @@ padding-top: 60px;
         </li>
 
         <li class="menuItem">
-          <a href="#about" id="productManagerBtn" class="menuOption">
+          <a href="./about.html" id="productManagerBtn" class="menuOption">
             <i class="fas fa-info"></i>
             <h5 class="menuText">About</h5>
           </a>
         </li>
         <li class="menuItem">
-          <a href="#project" id="constantManagerBtn" class="menuOption">
+          <a href="./project.html" id="constantManagerBtn" class="menuOption">
             <i class="fas fa-border-all"></i>
             <h5 class="menuText">Projects</h5>
           </a>
@@ -411,7 +411,7 @@ padding-top: 60px;
           </a>
         </li>
         <li class="menuItem">
-          <a href="#" id="constantManagerBtn" class="menuOption">
+          <a href="/blog" id="constantManagerBtn" class="menuOption">
             <i class="fas fa-blog"></i>
             <h5 class="menuText">Blogs</h5>
           </a>
@@ -430,6 +430,9 @@ padding-top: 60px;
       <div class="date">
             <span class="Month"></span>
             <span class="Day"></span>
+      </div>
+      <div class='partition'>
+        <span class='temp'></span>
       </div>
     </div>
 
