--- a/project.html
+++ b/project.html
@@ -90,6 +90,8 @@
           </div>
         </div>
     <!-- Menu Bar Creation -->
+    <div class="row header" id="headerrr1">
+      <div class="col-lg-1">
     <div id="menu" class="menu">
       <div class="actionsBar">
         <div>
@@ -108,13 +110,13 @@
         </li>
 
         <li class="menuItem">
-          <a href="#about" id="productManagerBtn" class="menuOption">
+          <a href="./about.html" id="productManagerBtn" class="menuOption">
             <i class="fas fa-info"></i>
             <h5 class="menuText">About</h5>
           </a>
         </li>
         <li class="menuItem">
-          <a href="#" id="constantManagerBtn" class="menuOption">
+          <a href="./project.html" id="constantManagerBtn" class="menuOption">
             <i class="fas fa-border-all"></i>
             <h5 class="menuText">Projects</h5>
           </a>
@@ -143,7 +145,7 @@
           </a>
         </li>
         <li class="menuItem">
-          <a href="#" id="constantManagerBtn" class="menuOption">
+          <a href="/blog" id="constantManagerBtn" class="menuOption">
             <i class="fas fa-blog"></i>
             <h5 class="menuText">Blogs</h5>
           </a>
@@ -154,7 +156,19 @@
             <h5 class="menuText">Contact</h5>
           </a>
         </li>
+
       </ul>
+      <div class="time">
+      <span class="Time"></span>
+      <span class="Format"></span>
+      <div class="date">
+            <span class="Month"></span>
+            <span class="Day"></span>
+      </div>
+      <div class='partition'>
+        <span class='temp'></span>
+      </div>
+    </div>
 
       <div class="themeBar">
         <div>
@@ -162,14 +176,16 @@
             <i class="fas fa-moon" id="fa-moon"></i>
             <i class="fas fa-sun sun1" id="img-fluid"></i>
           </button>
+
         </div>
       </div>
     </div>
+  </div>
 
     <br /><br /><br /><br />
 
     <!-- Projects Section Design -->
-    <section class="Projects__section">
+    <section class="Projects__section col-lg-9">
       <div class="container">
         <h1>Projects</h1>
 
@@ -211,9 +227,13 @@
             </div>
             <div class="Project__BTn">
               <a
+                class="cta"
                 href="https://apkcombo.com/engy-craft-factory/com.engycraftfactory.shopping/"
-                >View Details</a
-              >
+                ><span>View Details</span>
+                <svg width="13px" height="10px" viewBox="0 0 13 10">
+                  <path d="M1,5 L11,5"></path>
+                  <polyline points="8 1 12 5 8 9"></polyline></svg
+              ></a>
             </div>
           </div>
         </div>
@@ -246,7 +266,12 @@
               </div>
             </div>
             <div class="Project__BTn">
-              <!-- <a href="#">View Details</a> -->
+              <a class="cta" href="#"
+                ><span>View Details</span>
+                <svg width="13px" height="10px" viewBox="0 0 13 10">
+                  <path d="M1,5 L11,5"></path>
+                  <polyline points="8 1 12 5 8 9"></polyline></svg
+              ></a>
             </div>
           </div>
 
@@ -287,7 +312,12 @@
             <h2>Photography</h2>
             <p>Canon certified official photographer in Jodhpur</p>
             <div class="Project__BTn">
-              <a href="#">View Details</a>
+              <a class="cta" href="#" id="a"
+                ><span>View Details</span>
+                <svg width="13px" height="10px" viewBox="0 0 13 10">
+                  <path d="M1,5 L11,5"></path>
+                  <polyline points="8 1 12 5 8 9"></polyline></svg
+              ></a>
             </div>
           </div>
         </div>
@@ -317,7 +347,12 @@
               </div>
             </div>
             <div class="Project__BTn">
-              <a href="#">View Details</a>
+              <a class="cta" href="#"
+                ><span>View Details</span>
+                <svg width="13px" height="10px" viewBox="0 0 13 10">
+                  <path d="M1,5 L11,5"></path>
+                  <polyline points="8 1 12 5 8 9"></polyline></svg
+              ></a>
             </div>
           </div>
 
