--- a/gallery.html
+++ b/gallery.html
@@ -90,96 +90,97 @@
         </div>
       </br></br>
 
-    <div class="row">
-      <div class="col-lg-2">
-        <div id="menu" class="menu">
-          <div class="actionsBar">
-            <div>
-              <button id="menuBtn" type="button">
-                <i class="fas fa-bars"></i>
-              </button>
-              <h3 class="menuText">Dashboard</h3>
-            </div>
+      <div class="row header" id="headerrr1">
+        <div class="col-lg-1">
+      <div id="menu" class="menu">
+        <div class="actionsBar">
+          <div>
+            <button id="menuBtn" type="button">
+              <i class="fas fa-bars"></i>
+            </button>
+            <h3 class="menuText">Dashboard</h3>
           </div>
-          <ul class="optionsBar">
-            <li class="menuItem">
-              <a href="./index.html" class="menuOption">
-                <img src="./images/Logo.png" class="img-fluid" alt="Logo" />
-                <h5 class="menuText">Home</h5>
-              </a>
-            </li>
-
-            <li class="menuItem">
-              <a href="#about" id="productManagerBtn" class="menuOption">
-                <i class="fas fa-info"></i>
-                <h5 class="menuText">About</h5>
-              </a>
-            </li>
-            <li class="menuItem">
-              <a href="#" id="constantManagerBtn" class="menuOption">
-                <i class="fas fa-border-all"></i>
-                <h5 class="menuText">Projects</h5>
-              </a>
-            </li>
-            <li class="menuItem">
-              <a
-                href="./certificates/cr-main.html"
-                id="constantManagerBtn"
-                class="menuOption"
-              >
-                <i class="fas fa-certificate"></i>
-                <h5 class="menuText">Certificate</h5>
-              </a>
-            </li>
-            <li class="menuItem">
-              <a
-                href="./gallery.html"
-                id="constantManagerBtn"
-                class="menuOption"
-              >
-                <i class="fas fa-images"></i>
-                <h5 class="menuText">Gallery</h5>
-              </a>
-            </li>
-
-            <li class="menuItem">
-              <a href="./music.html" id="constantManagerBtn" class="menuOption">
-                <i class="fas fa-play"></i>
-                <h5 class="menuText">Music</h5>
-              </a>
-            </li>
-            <li class="menuItem">
-              <a href="#" id="constantManagerBtn" class="menuOption">
-                <i class="fas fa-blog"></i>
-                <h5 class="menuText">Blogs</h5>
-              </a>
-            </li>
-            <li class="menuItem">
-              <a
-                href="./contact.html"
-                id="constantManagerBtn"
-                class="menuOption"
-              >
-                <i class="fas fa-phone"></i>
-                <h5 class="menuText">Contact</h5>
-              </a>
-            </li>
-          </ul>
-
-          <div class="themeBar">
-            <div>
-              <button
-                class="btn-toggle button"
-                type="button"
-                id="dark-mode-toggle"
-              >
-                <i class="fas fa-moon" id="fa-moon"></i>
-                <i class="fas fa-sun sun1" id="img-fluid"></i>
-              </button>
-            </div>
+        </div>
+        <ul class="optionsBar">
+          <li class="menuItem">
+            <a href="./index.html" class="menuOption">
+              <img src="./images/Logo.png" class="img-fluid" alt="Logo" />
+              <h5 class="menuText">Home</h5>
+            </a>
+          </li>
+  
+          <li class="menuItem">
+            <a href="./about.html" id="productManagerBtn" class="menuOption">
+              <i class="fas fa-info"></i>
+              <h5 class="menuText">About</h5>
+            </a>
+          </li>
+          <li class="menuItem">
+            <a href="./project.html" id="constantManagerBtn" class="menuOption">
+              <i class="fas fa-border-all"></i>
+              <h5 class="menuText">Projects</h5>
+            </a>
+          </li>
+          <li class="menuItem">
+            <a
+              href="./certificates/cr-main.html"
+              id="constantManagerBtn"
+              class="menuOption"
+            >
+              <i class="fas fa-certificate"></i>
+              <h5 class="menuText">Certificate</h5>
+            </a>
+          </li>
+          <li class="menuItem">
+            <a href="./gallery.html" id="constantManagerBtn" class="menuOption">
+              <i class="fas fa-images"></i>
+              <h5 class="menuText">Gallery</h5>
+            </a>
+          </li>
+  
+          <li class="menuItem">
+            <a href="./music.html" id="constantManagerBtn" class="menuOption">
+              <i class="fas fa-play"></i>
+              <h5 class="menuText">Music</h5>
+            </a>
+          </li>
+          <li class="menuItem">
+            <a href="/blog" id="constantManagerBtn" class="menuOption">
+              <i class="fas fa-blog"></i>
+              <h5 class="menuText">Blogs</h5>
+            </a>
+          </li>
+          <li class="menuItem">
+            <a href="./contact.html" id="constantManagerBtn" class="menuOption">
+              <i class="fas fa-phone"></i>
+              <h5 class="menuText">Contact</h5>
+            </a>
+          </li>
+  
+        </ul>
+        <div class="time">
+        <span class="Time"></span>
+        <span class="Format"></span>
+        <div class="date">
+              <span class="Month"></span>
+              <span class="Day"></span>
+        </div>
+        <div class='partition'>
+          <span class='temp'></span>
+        </div>
+      </div>
+  
+        <div class="themeBar">
+          <div>
+            <button class="btn-toggle button" type="button" id="dark-mode-toggle">
+              <i class="fas fa-moon" id="fa-moon"></i>
+              <i class="fas fa-sun sun1" id="img-fluid"></i>
+            </button>
+  
           </div>
         </div>
       </div>
+    </div>
       <div class="col-lg-9">
           <h1>MY GALLERY</h1>
         <div id="gallery" class="container-fluid">
