--- a/certificates/cr-main.html
+++ b/certificates/cr-main.html
@@ -94,8 +94,8 @@
         </div>
 
 
-        <div class="row header" id="headerrr1">
-          <div class="col-lg-1">
+        <div class="row" id="headerrr1">
+          <div class="col-lg-2">
         <div id="menu" class="menu">
           <div class="actionsBar">
             <div>
