--- a/music.html
+++ b/music.html
@@ -356,7 +356,7 @@ padding-top: 60px;
           </div>
         </div>
     <!-- Menu Bar Creation -->
-    <div class="row header" id="headerrr1">
+    <div class="row" id="headerrr1">
       <div class="col-lg-1">
     <div id="menu" class="menu">
       <div class="actionsBar">
