--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
           </div>
         </div>
 
-        <div class="row header" id="headerrr1">
+        <div class="row" id="headerrr1">
           <div class="col-lg-1">
         <div id="menu" class="menu">
           <div class="actionsBar">
