--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
         </div>
 
     <h1>Contact Me</h1>
-    <div class="row header" id="headerrr1">
+    <div class="row" id="headerrr1">
       <div class="col-lg-1">
     <div id="menu" class="menu">
       <div class="actionsBar">
