--- a/gallery.html
+++ b/gallery.html
@@ -90,8 +90,8 @@
         </div>
       </br></br>
 
-      <div class="row header" id="headerrr1">
-        <div class="col-lg-1">
+      <div class="row" id="headerrr1">
+        <div class="col-lg-2">
       <div id="menu" class="menu">
         <div class="actionsBar">
           <div>
