--- a/project.html
+++ b/project.html
@@ -90,7 +90,7 @@
           </div>
         </div>
     <!-- Menu Bar Creation -->
-    <div class="row header" id="headerrr1">
+    <div class="row" id="headerrr1">
       <div class="col-lg-1">
     <div id="menu" class="menu">
       <div class="actionsBar">
