--- a/index.html
+++ b/index.html
@@ -991,6 +991,16 @@
       document.getElementsByClassName("cta")[2].style.color="black";
        document.getElementsByClassName("cta")[3].style.color="black";
        document.getElementsByClassName("cta")[4].style.color="black";
+  document.getElementById("name").style.backgroundColor="#ffff";
+      document.getElementById("name").style.color="#121212";
+
+
+      document.getElementById("email").style.backgroundColor="#ffff";
+        document.getElementById("email").style.color="#121212";
+        document.getElementById("phone").style.backgroundColor="#ffff";
+          document.getElementById("phone").style.color="#121212";
+          document.getElementById("texta").style.backgroundColor="#ffff";
+            document.getElementById("texta").style.color="#121212";
        sun.classList.add("sun1");
        moon.classList.remove("sun1");
       // 2. Update darkMode in localStorage
