--- a/index.html
+++ b/index.html
@@ -167,7 +167,56 @@
         </div> -->
 
     <!-- Menu Bar Creation -->
+
+
+
+
+
     <div class="row header" id="headerrr1">
+      <div class="con">
+            <div class="nav-bar">
+              <div class="toggle-menu">
+                <div class="line line1"></i></div>
+                <div class="line line2"></div>
+                <div class="line line3"></div>
+              </div>
+              <ul class="nav-list">
+                <li class="nav-list-item"><a href="./index.html" class="nav-link"><img src="./images/Logo.png" class="img-fluid" alt="Logo" width="30" height="30" />Home</a></li>
+                <li class="nav-list-item"><a href="#about"  class="nav-link"><i class="fas fa-info"></i>
+                <h5 >About</h5></a></li>
+                <li class="nav-list-item">
+                  <a href="#" class="nav-link">    <i class="fas fa-border-all"></i>
+                      <h5 >Projects</h5></a>
+                </li>
+                <li class="nav-list-item"><a href="./certificates/cr-main.html" class="nav-link"><i class="fas fa-certificate"></i>
+                <h5 >Certificate</h5></a></li>
+                <li class="nav-list-item">
+                  <a href="./gallery.html" class="nav-link"><i class="fas fa-images"></i>
+                  <h5 >Gallery</h5></a>
+                </li>
+                <li class="nav-list-item">
+                  <a href="./music.html" class="nav-link"><i class="fas fa-play"></i>
+                  <h5 >Music</h5></a>
+                </li>
+                <li class="nav-list-item">
+                  <a href="#" class="nav-link">  <i class="fas fa-blog"></i>
+                      <h5>Blogs</h5></a>
+                </li>
+                <li class="nav-list-item">
+                  <a href="./contact.html" class="nav-link"><i class="fas fa-phone"></i>
+                  <h5 >Contact</h5></a>
+                </li>
+                <li class="nav-list-item">
+                  <div class="btn-toggle button" type="button" id="dark-mode">
+                    <i class="fas fa-moon" id="fa-moon1"></i>
+                    <i class="fas fa-sun sun1" id="img-fluid1"></i>
+                  </div>
+                </li>
+              </ul>
+
+            </div>
+          </div>
+        </br></br>
       <div class="col-lg-1">
     <div id="menu" class="menu">
       <div class="actionsBar">
@@ -263,16 +312,48 @@
     <!-- First Section Main Area   old imge class Main__Img img-fluid-->
 
       <div class="col-lg-7">
-        <div class="First__Section ">
+        <div class="First__Section " id="mob-user_img">
         <img
           src="./images/Main__img-1.png"
           class="user_img"
           alt="Main_img"
         />
 </div>
+<div class="heading-jump" id="heading-jump">
+  <h2 class="center jello">
+    <span>H</span>
+    <span>i</span>
+    <span>,</span>
+  </h2>
+  <h2 class="center jello">
+    <span>I</span>
+    <span>'</span>
+    <span>M</span>
+    <span>S</span>
+    <span>A</span>
+    <span>M</span>
+    <span>A</span>
+    <span>R</span>
+    <span>T</span>
+    <span>H</span>
+  </h2>
+</div>
+<div class="wrapper" id="wrapper">
+  <div class="word">
+    <span></span>
+    <span>Android Developer</span>
+    <span>Freelancer</span>
+    <span>Blogger</span>
+    <span>Photographer</span>
+    <span>Web Designer</span>
+    <span>Prototype</span>
+    <span>Motivational Speaker</span>
+  </div>
+</div>
+
 </div>
      <div class="col-lg-4">
-        <div class="heading-jump">
+        <div class="heading-jump" id="mob-jum">
           <h2 class="center jello">
             <span>H</span>
             <span>i</span>
@@ -304,6 +385,13 @@
             <span>Motivational Speaker</span>
           </div>
         </div>
+        <div class="First__Section " id="First__Section-img">
+        <img
+          src="./images/Main__img-1.png"
+          class="user_img"
+          alt="Main_img"
+        />
+</div>
 
         </div>
             </div>
@@ -1011,7 +1099,7 @@
     // start things off with it on
     if (darkMode === 'enabled') {
       enableDarkMode();
-      
+
 
     }
 
