--- a/gallery.html
+++ b/gallery.html
@@ -90,8 +90,8 @@
         </div>
       </br></br>
 
-      <div class="row header" id="headerrr1">
-        <div class="col-lg-1">
+      <div class="row">
+        <div class="col-lg-3">
       <div id="menu" class="menu">
         <div class="actionsBar">
           <div>
@@ -108,7 +108,7 @@
               <h5 class="menuText">Home</h5>
             </a>
           </li>
-  
+
           <li class="menuItem">
             <a href="./about.html" id="productManagerBtn" class="menuOption">
               <i class="fas fa-info"></i>
@@ -137,7 +137,7 @@
               <h5 class="menuText">Gallery</h5>
             </a>
           </li>
-  
+
           <li class="menuItem">
             <a href="./music.html" id="constantManagerBtn" class="menuOption">
               <i class="fas fa-play"></i>
@@ -156,7 +156,7 @@
               <h5 class="menuText">Contact</h5>
             </a>
           </li>
-  
+
         </ul>
         <div class="time">
         <span class="Time"></span>
@@ -169,14 +169,14 @@
           <span class='temp'></span>
         </div>
       </div>
-  
+
         <div class="themeBar">
           <div>
             <button class="btn-toggle button" type="button" id="dark-mode-toggle">
               <i class="fas fa-moon" id="fa-moon"></i>
               <i class="fas fa-sun sun1" id="img-fluid"></i>
             </button>
-  
+
           </div>
         </div>
       </div>
