--- a/contact.html
+++ b/contact.html
@@ -231,7 +231,7 @@
     <!-- Contact Section -->
     <!-- Contact Section -->
     <div class="col-lg-10">
-    <section class="Contact__Section" id="contact">
+    <section style="min-height: 87vh;" class="Contact__Section" id="contact">
       <div class="container-fluid">
         <div class="row">
           <div class="col col-sm-12 col-md-6 col-lg-6 mx-auto Contact__Part_1">
