--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
 
 
-    <div class="row header" id="headerrr1">
+    <div style='padding-left: 0 !important;' class="row header" id="headerrr1">
       <div class="con">
             <div class="nav-bar">
               <div class="toggle-menu">
@@ -352,7 +352,7 @@
 </div>
 
 </div>
-     <div class="col-lg-4">
+     <div class="col-lg-3">
         <div class="heading-jump" id="mob-jum">
           <h2 class="center jello">
             <span>H</span>
