--- a/certificates/cr2.html
+++ b/certificates/cr2.html
@@ -213,7 +213,7 @@
       </div>
     </section>
 </div>
-</div
+</div>
 <footer style="margin-top:50px;">
   <p >
     Created With ❤️ By Samarth | Copyright &copy;
