--- a/about.html
+++ b/about.html
@@ -189,7 +189,7 @@
     <!-- About Section -->
 
       <div class="col-lg-10">
-    <section class="About__Section" id="about">
+    <section style='min-height: 95vh;' class="About__Section" id="about">
       <div class="container">
         <h1>About Me</h1>
         <div class="row">
